// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CToast customize 1`] = `
<div>
  <div
    aria-atomic="true"
    aria-live="assertive"
    class="toast fade show bg-warning border-0 bazinga"
    role="alert"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CToast component 1`] = `
<div>
  <div
    aria-atomic="true"
    aria-live="assertive"
    class="toast fade show"
    role="alert"
  >
    Test
  </div>
</div>
`;
